# endgame

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
src/: find_magics.cpp  magic_bb.cpp  magic_bb.h  main.cpp  movegen.cpp  movegen.h  perft.cpp  perft.h  position.cpp  position.h  types.h  utils.cpp  utils.h  zobrist.h
